display flex grid Practice

--- a/Practice/HTML-CSS/6-Form.html
+++ b/Practice/HTML-CSS/6-Form.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qu2</title>
+    <title>Form practice</title>
 </head>
 <body>
-    <!-- <p>a <sup>2</sup> + b <sup>2</sup>= c <sup>2</sup></p>
-    <p>C <sub>6</sub> H <sub>12</sub> O <sub>6</sub></p> -->
 
     <!-- Qu1 -->
      <p>Today is the 9 <sub>th</sub> of October and 2 <sub>4</sub>=16 always</p>
